--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/responsive.css">
 </head>
 
 <body>
@@ -51,7 +52,7 @@
 
       </div>
 
-      <div class="column">
+      <div class="column" id="book_shelf">
 
         <section class="book_shelf">
           <h2>Belum selesai dibaca</h2>
